--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "vite build",
+    "predeploy": "vite build --base=/popandfun/",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
