--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:production": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "vite build --base=/popandfun/",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "vite build --base=/",
+    "deploy": "gh-pages -d dist",
+    "deploy:ghpages": "npm run predeploy && npm run deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
