chore: Update env and add server files

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,6 @@
-# Production environment for custom domain (https://popandfun.gnritservices.com)
-# This file should be used when deploying to your custom domain with backend
-
-# Backend API endpoint (update this with your actual backend URL)
+# Production environment
+# Backend API endpoint - Update this after deploying your server
 VITE_API_ENDPOINT=https://popandfun.gnritservices.com/api
 
-# Firebase Config (already in firebase.ts)
-# Razorpay keys (in backend API only, not in frontend)
+# For local testing, use:
+# VITE_API_ENDPOINT=http://localhost:3000/api
